add community section

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -310,6 +310,11 @@
             </ul>
           </li>
 
+          <!-- Community -->
+          <li class="sidebar-title">
+            <a href="#community">Community</a>
+          </li>
+
           <!-- cheatsheet -->
           <li class="sidebar-title">
             <a href="#cheatsheets">Cheatsheets</a>
@@ -845,18 +850,6 @@
             </ul>
           </div>
 
-          <!-- Forum -->
-          <div class="resource-card">
-          <h3 class="resource-card-title">Forum</h3>
-          <ul class="resource-card-links">
-            <li class="resource-link">
-              <a target="_blank"
-                href="https://stackoverflow.com/">Stack Overflow - where developer learn share and build</a>
-                <span class="resource-link-badge">Forum</span>
-            </li>
-          </ul>
-        </div>
-
           <!-- others -->
           <div class="resource-card">
             <h3 class="resource-card-title">Others</h3>
@@ -969,18 +962,6 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/vNc2s-ic1cc">6 handy Css animation projects. ~ Envato
                   Tuts+</a>
-              </li>
-            </ul>
-          </div>
-
-          <!-- Forum -->
-          <div class="resource-card">
-            <h3 class="resource-card-title">Forum</h3>
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank"
-                  href="https://stackoverflow.com/">Stack Overflow - where developer learn share and build</a>
-                  <span class="resource-link-badge">Forum</span>
               </li>
             </ul>
           </div>
@@ -1364,18 +1345,6 @@
             </ul>
           </div>
 
-          <!-- Forum -->
-          <div class="resource-card">
-            <h3 class="resource-card-title">Forum</h3>
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank"
-                  href="https://stackoverflow.com/">Stack Overflow - where developer learn share and build</a>
-                  <span class="resource-link-badge">Forum</span>
-              </li>
-            </ul>
-          </div>
-
           <!-- others -->
           <div class="resource-card">
             <h3 class="resource-card-title">Others</h3>
@@ -1473,19 +1442,6 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtube.com/playlist?list=PLpwngcHZlPadhRwryAXw3mJWX5KH3T5L3">Basic and
                   advanced JavaScript Projects. ~ Coding Nepal</a>
-              </li>
-            </ul>
-          </div>
-
-
-          <!-- Forum -->
-          <div class="resource-card">
-            <h3 class="resource-card-title">Forum</h3>
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank"
-                  href="https://stackoverflow.com/">Stack Overflow - where developer learn share and build</a>
-                  <span class="resource-link-badge">Forum</span>
               </li>
             </ul>
           </div>
@@ -1865,18 +1821,6 @@
             </ul>
           </div>
 
-
-          <!-- Dev Tools -->
-          <div class="resource-card">
-            <h3 class="resource-card-title">Dev Tools</h3>
-            <ul class="resource-card-links">
-              <li class="resource-link">
-                <a target="_blank" href="https://www.postman.com/">Postman API - an API platform for building and using APIs </a>
-                <span class="resource-link-badge">Link</span>
-              </li>
-            </ul>
-          </div>
-
           <!-- Practice Projects -->
           <div class="resource-card">
             <h3 class="resource-card-title">Practice Projects</h3>
@@ -2225,12 +2169,43 @@
             <h3 class="resource-card-title">Others</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href=""></a>
-                <span class="resource-link-badge"></span>
+                <a target="_blank" href="https://www.postman.com/">Postman</a>
+                <span class="resource-link-badge">tool</span>
               </li>
             </ul>
           </div>
         </div>
+      </section>
+
+      <!--*Community -->
+      <section id="community" class="resource-section">
+        <h2 class="resource-section__heading">Community</h2>
+
+        <div class="resource-section__body">
+          <p>
+            Connect to the web developer community, an awesome resources to 
+            ask questions and get answers from the experts and professionals.
+          </p>
+        </div>
+
+        <ul class="resource-card-links">
+          <li class="resource-link">
+            <a href="https://stackoverflow.com/">Stack Overflow</a>
+            <span class="resource-link-badge">Forum</span>
+          </li>
+        </ul>
+        <ul class="resource-card-links">
+          <li class="resource-link">
+            <a href="https://code.quora.com/">Quora</a>
+            <span class="resource-link-badge">Forum</span>
+          </li>
+        </ul>
+        <ul class="resource-card-links">
+          <li class="resource-link">
+            <a href="https://www.reddit.com/r/webdev/">Reddit</a>
+            <span class="resource-link-badge">Forum</span>
+          </li>
+        </ul>
       </section>
 
       <!--*Cheatsheets -->
