Added a title to the tool link in API section.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1844,7 +1844,7 @@
             </p>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://jsonplaceholder.typicode.com/">Free fake API for testing and
+                <a target="_blank" href="https://jsonplaceholder.typicode.com/">JsonPlaceholder - Free fake API for testing and
                   prototyping.</a>
                 <span class="resource-link-badge">Tool</span>
               </li>
