Add postman to API section

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -264,6 +264,11 @@
           <!-- apis -->
           <li class="sidebar-title">
             <a href="#apis">APIs</a>
+            <ul class="sidebar-sublinks">
+              <li class="sidebar-subtitle">
+                <a href="#postman">Postman</a>
+              </li>
+            </ul>
           </li>
 
           <!-- js frameworks and libraries -->
@@ -1865,6 +1870,10 @@
                   Kubow</a>
                 <span class="resource-link-badge">Video</span>
               </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.postman.com/">Postman - Postman is an API platform for building and using APIs. Postman simplifies each step of the API lifecycle and streamlines collaboration so you can create better APIs—faster.</a>
+                <span class="resource-link-badge">Tool</span>
+              </li>
             </ul>
           </div>
         </div>
@@ -2169,8 +2178,7 @@
             <h3 class="resource-card-title">Others</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://www.postman.com/">Postman</a>
-                <span class="resource-link-badge">tool</span>
+                <a target="_blank" href=""></a>
               </li>
             </ul>
           </div>
