--- a/src/index.html
+++ b/src/index.html
@@ -18,22 +18,22 @@
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://techroadmap.netlify.com" />
+    <meta property="og:url" content="https://careerroadmap.tech" />
     <meta property="og:title" content="Tech Roadmap" />
     <meta
       property="og:description"
       content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
-    <meta property="og:image" content="1200px to 627px less than 5mb" />
+    <meta property="og:image" content="https://careerroadmap.tech/assets/seo-image.png" />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://techroadmap.netlify.com" />
+    <meta property="twitter:url" content="https://careerroadmap.tech" />
     <meta property="twitter:title" content="Tech Roadmap" />
     <meta
       property="twitter:description"
       content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
-    <meta property="twitter:image" content="1200px to 627px less than 5mb" />
+    <meta property="twitter:image" content="https://careerroadmap.tech/assets/seo-image.png" />
 
     <!--* Fonts -->
     <!-- Google fonts offline -->
