--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -21,7 +21,7 @@
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://techroadmap.netlify.com" />
+    <meta property="og:url" content="https://careerroadmap.tech" />
     <meta
       property="og:title"
       content="Contributing to this open source project. | Tech Roadmap."
@@ -30,10 +30,10 @@
       property="og:description"
       content="This project is OpenSource. Learn how to contribute to this project. You can contribute as a developer here or a non-developer here."
     />
-    <meta property="og:image" content="1200px to 627px less than 5mb" />
+    <meta property="og:image" content="https://careerroadmap.tech/assets/seo-image.png" />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://techroadmap.netlify.com" />
+    <meta property="twitter:url" content="https://careerroadmap.tech" />
     <meta
       property="twitter:title"
       content="Contributing to this open source project. | Tech Roadmap."
@@ -42,7 +42,7 @@
       property="twitter:description"
       content="This project is OpenSource. Learn how to contribute to this project. You can contribute as a developer here or a non-developer here."
     />
-    <meta property="twitter:image" content="1200px to 627px less than 5mb" />
+    <meta property="twitter:image" content="https://careerroadmap.tech/assets/seo-image.png" />
 
     <!--* Fonts -->
     <!-- Google fonts offline -->
