Updated meta tag contents in Careers page

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -21,7 +21,7 @@
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://techroadmap.netlify.com" />
+    <meta property="og:url" content="https://careerroadmap.tech" />
     <meta
       property="og:title"
       content="The different careers in tech. | Tech Roadmap."
@@ -30,10 +30,10 @@
       property="og:description"
       content="Learn the different careers in the tech industry along with videos and articles to help you decide on a tech career."
     />
-    <meta property="og:image" content="1200px to 627px less than 5mb" />
+    <meta property="og:image" content="https://careerroadmap.tech/assets/seo-image.png" />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://techroadmap.netlify.com" />
+    <meta property="twitter:url" content="https://careerroadmap.tech" />
     <meta
       property="twitter:title"
       content="The different careers in tech. | Tech Roadmap."
@@ -42,7 +42,7 @@
       property="twitter:description"
       content="Learn the different careers in the tech industry along with videos and articles to help you decide on a tech career."
     />
-    <meta property="twitter:image" content="1200px to 627px less than 5mb" />
+    <meta property="twitter:image" content="https://careerroadmap.tech/assets/seo-image.png" />
 
     <!--* Fonts -->
     <!-- Google fonts offline -->
