Updated meta tag contents in Frontend career page

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -17,18 +17,18 @@
     content="Free videos, articles, guides and other resources to help you become a frontend developer." />
   <!-- Open Graph / Facebook Meta Tags -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://techroadmap.netlify.app" />
+  <meta property="og:url" content="https://careerroadmap.tech" />
   <meta property="og:title" content="Frontend Development Roadmap | Tech Roadmap." />
   <meta property="og:description"
     content="Free videos, articles, guides and other resources to help you become a frontend developer." />
-  <meta property="og:image" content="1200px to 627px less than 5mb" />
+  <meta property="og:image" content="https://careerroadmap.tech/assets/seo-image.png" />
   <!-- Twitter Meta Tags -->
   <meta property="twitter:careers__card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://techroadmap.netlify.app" />
+  <meta property="twitter:url" content="https://careerroadmap.tech" />
   <meta property="twitter:title" content="Frontend Development Roadmap | Tech Roadmap." />
   <meta property="twitter:description"
     content="Free videos, articles, guides and other resources to help you become a frontend developer." />
-  <meta property="twitter:image" content="1200px to 627px less than 5mb" />
+  <meta property="twitter:image" content="https://careerroadmap.tech/assets/seo-image.png" />
 
   <!--* Fonts -->
   <!-- Google fonts offline -->
