added favicon to the pages.

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -8,6 +8,7 @@
 
     <!--* Title -->
     <title>The different careers in tech. | Tech Roadmap.</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
@@ -15,6 +16,8 @@
       name="title"
       content="The different careers in tech. | Tech Roadmap."
     />
+    <meta name="type" content="website" />
+    <meta name="author" content="Pelumi Akintokun, Timonwa" />
     <meta
       name="description"
       content="Learn the different careers in the tech industry along with videos and articles to help you decide on a tech career."
@@ -135,7 +138,7 @@
       <!-- * banner -->
       <header class="banner career-page-banner">
         <div class="banner-wrapper">
-          <p></p>
+          <p>
             "A year from now you may wish you had started today." – Karen Lamb
           </p>
         </div>
