--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -9,10 +9,13 @@
 
   <!--* Title -->
   <title>Frontend Development Roadmap | Tech Roadmap.</title>
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
 
   <!-- * SEO Meta Tags -->
   <!-- Primary Meta Tags -->
   <meta name="title" content="Frontend Development Roadmap | Tech Roadmap." />
+    <meta name="type" content="website" />
+    <meta name="author" content="Pelumi Akintokun, Timonwa" />
   <meta name="description"
     content="Free videos, articles, guides and other resources to help you become a frontend developer." />
   <!-- Open Graph / Facebook Meta Tags -->
