--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,13 @@
 
     <!--* Title -->
     <title>Tech Roadmap</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
     <meta name="title" content="Tech Roadmap" />
+    <meta name="type" content="website" />
+    <meta name="author" content="Pelumi Akintokun, Timonwa" />
     <meta
       name="description"
       content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
