--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -8,6 +8,11 @@
 
     <!--* Title -->
     <title>Contributing to this open source project. | Tech Roadmap.</title>
+    <link
+      rel="shortcut icon"
+      href="../assets/favicon.ico"
+      type="image/x-icon"
+    />
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
@@ -15,6 +20,8 @@
       name="title"
       content="Contributing to this open source project. | Tech Roadmap."
     />
+    <meta name="type" content="website" />
+    <meta name="author" content="Pelumi Akintokun, Timonwa" />
     <meta
       name="description"
       content="This project is OpenSource. Learn how to contribute to this project."
@@ -30,7 +37,10 @@
       property="og:description"
       content="This project is OpenSource. Learn how to contribute to this project. You can contribute as a developer here or a non-developer here."
     />
-    <meta property="og:image" content="https://careerroadmap.tech/assets/seo-image.png" />
+    <meta
+      property="og:image"
+      content="https://careerroadmap.tech/assets/seo-image.png"
+    />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
     <meta property="twitter:url" content="https://careerroadmap.tech" />
@@ -42,7 +52,10 @@
       property="twitter:description"
       content="This project is OpenSource. Learn how to contribute to this project. You can contribute as a developer here or a non-developer here."
     />
-    <meta property="twitter:image" content="https://careerroadmap.tech/assets/seo-image.png" />
+    <meta
+      property="twitter:image"
+      content="https://careerroadmap.tech/assets/seo-image.png"
+    />
 
     <!--* Fonts -->
     <!-- Google fonts offline -->
