added favicon to the pages.

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -8,7 +8,7 @@
 
     <!--* Title -->
     <title>The different careers in tech. | Tech Roadmap.</title>
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
