--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -9,7 +9,7 @@
 
   <!--* Title -->
   <title>Frontend Development Roadmap | Tech Roadmap.</title>
-  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../../assets/favicon.ico" type="image/x-icon">
 
   <!-- * SEO Meta Tags -->
   <!-- Primary Meta Tags -->
