Implemented corrections and resolved issues raised by Timonwa

--- a/src/html/careers/backend.html
+++ b/src/html/careers/backend.html
@@ -360,17 +360,18 @@
             <h3 class="resource-card-title">Articles</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://www.freecodecamp.org/news/learn-backend-development/">The Best Way to
-                  Learn Backend Web Development - FreeCodeCamp.org</a>
+                <a target="_blank" href="https://learntocodewith.me/posts/backend-development/">The Beginner's Guide to
+                  Backend Development (2022 Guide) ~ Krystal Tolani
+                </a>
+                <span class="resource-link-badge">Article</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://www.interviewbit.com/blog/backend-developer-skills/">Backend Developer
                   Skills You Must Have - InterviewBit.com</a>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://learntocodewith.me/posts/backend-development/">The Beginner's Guide to
-                  Backend Development (2022 Guide)
-                </a>
+                <a target="_blank" href="https://www.freecodecamp.org/news/learn-backend-development/">The Best Way to
+                  Learn Backend Web Development - FreeCodeCamp.org</a>
               </li>
             </ul>
           </div>
@@ -413,8 +414,8 @@
                 </a>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://vitto.cc/backend-developer-roadmap">The Ultimate 2022 Backend Developer
-                  Roadmap: Kickstart Your Career ~ Vittorio Rivabella
+                <a target="_blank" href="https://vitto.cc/backend-developer-roadmap">The Ultimate 2022 JavaScript
+                  Backend Developer Roadmap: Kickstart Your Career ~ Vittorio Rivabella
                 </a>
               </li>
             </ul>
@@ -608,36 +609,8 @@
           <div id="online-editors" class="resource-card">
             <h3 class="resource-card-title">Online Editors (Playgrounds)</h3>
             <ul class="resource-card-links">
-              <!-- codepen -->
-              <li class="resource-link">
-                Codepen
-                <ul class="resource-link-sublinks">
-                  <li class="resource-link">
-                    <a target="_blank" href="https://codepen.io/">Website</a>
-                    <span class="resource-link-badge">Link</span>
-                  </li>
-                  <li class="resource-link">
-                    <a target="_blank"
-                      href="https://www.google.com/amp/s/www.freecodecamp.org/news/how-to-use-codepen">How to Use
-                      CodePen - A beginner's guide ~ Jessica
-                      Wilkins</a>
-                    <span class="resource-link-badge">Article</span>
-                  </li>
-                  <li class="resource-link">
-                    <a target="_blank" href="https://youtu.be/vb9uYBtqmeM">How to use Codepen with Chis Coyier. ~
-                      FreeCodeCamp</a>
-                    <span class="resource-link-badge">Video</span>
-                  </li>
-                  <li class="resource-link">
-                    <a target="_blank" href="https://youtu.be/v1io5m8MxfA">A beginner's guide to Codepen - The basics. ~
-                      Manuel
-                      Zavala</a>
-                    <span class="resource-link-badge">Video</span>
-                  </li>
-                </ul>
-              </li>
               <!-- CodeSandbox -->
-              <li class="resource-link">
+              <!-- <li class="resource-link">
                 CodeSandbox
                 <ul class="resource-link-sublinks">
                   <li class="resource-link">
@@ -656,7 +629,8 @@
                     <span class="resource-link-badge">Article</span>
                   </li>
                 </ul>
-              </li>
+              </li> -->
+
               <!-- vscode online -->
               <li class="resource-link">
                 VsCode Online
@@ -696,6 +670,17 @@
                   <li class="resource-link">
                     <a target="_blank"
                       href="https://play.google.com/store/apps/details?id=lk.visual.code.mobile">Download here</a>
+                    <span class="resource-link-badge">Link</span>
+                  </li>
+                </ul>
+              </li>
+              <!-- pydroid 3 editor -->
+              <li class="resource-link">
+                Pydroid 3 - IDE for Python 3
+                <ul class="resource-link-sublinks">
+                  <li class="resource-link">
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=ru.iiec.pydroid3">Download
+                      here</a>
                     <span class="resource-link-badge">Link</span>
                   </li>
                 </ul>
@@ -902,48 +887,32 @@
             <h3 class="resource-card-title">Heroku</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://www.heroku.com/platform">The Heroku Platform ~ Heroku</a>
-                <!-- <span class="resource-link-badge">Article</span> -->
+                <a target="_blank" href="https://www.heroku.com/platform">Website</a>
+                <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://devcenter.heroku.com/start">Getting Started on Heroku.</a>
-                <!-- <span class="resource-link-badge">Article</span> -->
+                <a target="_blank" href="https://devcenter.heroku.com/start">Documentation</a>
+                <span class="resource-link-badge">Link</span>
               </li>
-              <!-- <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/8hrJ4oN1u_8">How to host a website on GitHub . ~
-                  Programmingknowledge</a>
-                <span class="resource-link-badge">Video</span>
-              </li> -->
             </ul>
           </div>
           <!--*  Digital Ocean -->
           <div id="deploy-digital-ocean" class="resource-card">
             <h3 class="resource-card-title">DigitalOcean</h3>
-            <p>
-              Build applications by managing your own infrastructure with Droplets, implement modern container-based
-              methodology with Kubernetes, or use a fully-managed Platform-as-a-Service (PaaS) environment with App
-              Platform.
-            </p>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href=https://www.digitalocean.com />Home Page</a>
+                <a target="_blank" href=https://www.digitalocean.com />Website</a>
+                <span class="resource-link-badge">Link</span>
               </li>
               <li class="resource-link">
-                <a target="_blank" href=https://docs.digitalocean.com/products />Getting Started with DigitalOcean.</a>
+                <a target="_blank" href=https://docs.digitalocean.com/products />Documentation</a>
+                <span class="resource-link-badge">Link</span>
               </li>
-              <!-- <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/8hrJ4oN1u_8">How to host a website on GitHub . ~
-                  Programmingknowledge</a>
-                <span class="resource-link-badge">Video</span>
-              </li> -->
             </ul>
           </div>
           <!--*  Amazon Web Services -->
           <div id="aws" class="resource-card">
             <h3 class="resource-card-title">Amazon Web Services (AWS)</h3>
-            <p>Whether you're looking for compute power, database storage, content delivery, or other functionality, AWS
-              has the services to help you build sophisticated applications with increased flexibility, scalability and
-              reliability</p>
             <ul class="resource-card-links">
               <li class="resource-link">
                 <a target="_blank" href=https://aws.amazon.com />Home Page</a>
@@ -962,15 +931,6 @@
           <!--* Google Cloud Platform -->
           <div id="gcp" class="resource-card">
             <h3 class="resource-card-title">Google Cloud Platform</h3>
-            <p>
-              Google Cloud protects your data, applications, infrastructure, and customers from fraudulent activity,
-              spam, and abuse with the same infrastructure and security services Google uses. Google Cloud's networking,
-              data storage, and compute services provide data encryption at rest, in transit, and in use. Advanced
-              security tools support compliance and data confidentiality.</p>
-            <p>
-              Develop and run applications anywhere, using cloud-native technologies like containers, serverless, and
-              service mesh.
-            </p>
             <ul class="resource-card-links">
               <li class="resource-link">
                 <a target="_blank" href=https://cloud.google.com />Home Page</a>
@@ -1042,30 +1002,21 @@
             <h3 class="resource-card-title">Curated Playlist</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank"
-                  href="https://www.youtube.com/watch?v=QXeEoD0pB3E&list=PLsyeobzWxl7poL9JTVyndKe62ieoN-MZ3">
+                <a target="_blank" href="https://youtube.com/playlist?list=PLsyeobzWxl7poL9JTVyndKe62ieoN-MZ3">
                   Python Tutorials ~ Telusko</a>
               </li>
               <li class="resource-link">
-                <a target="_blank"
-                  href="https://www.youtube.com/watch?v=Z4D3M-NSN58&list=PLzMcBGfZo4-kQkZp-j9PNyKq7Yw5VYjq9">
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-kQkZp-j9PNyKq7Yw5VYjq9">
                   Python Django Tutorials ~ Tech with Tim</a>
               </li>
               <li class="resource-link">
-                <a target="_blank"
-                  href="https://www.youtube.com/watch?v=MwZwr5Tvyxo&list=PL-osiE80TeTs4UjLw5MM6OjgkjFeUxCYH">
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PL-osiE80TeTs4UjLw5MM6OjgkjFeUxCYH">
                   Flask Tutorials ~ Corey Schafer</a>
               </li>
               <li class="resource-link">
-                <a target="_blank"
-                  href="https://www.youtube.com/watch?v=mqhxxeeTbu0&list=PLzMcBGfZo4-n4vJJybUVV3Un_NFS5EOgX">Flask
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PLzMcBGfZo4-n4vJJybUVV3Un_NFS5EOgX">Flask
                   Tutorials ~ Tech with Tim</a>
               </li>
-              <!-- <li class="resource-link">
-                <a target="_blank" href="https://youtube.com/playlist?list=PLillGF-RfqbbnEGy3ROiLWk7JMCuSyQtX">
-                  Everything Vanilla JavaScript tutorials plus projects to
-                  build. ~ Traversy Media</a>
-                </li> -->
             </ul>
           </div>
 
@@ -1134,7 +1085,7 @@
 
       <!--* Javascript -->
       <section id="javascript" class="resource-section">
-        <h2 class="resource-section__heading">Javascript</h2>
+        <h2 class="resource-section__heading">Javascript (Node.js)</h2>
 
         <div class="resource-section__body">
           <p>
@@ -1248,11 +1199,7 @@
                     JavaScript projects for beginners – Easy ideas to get
                     started coding JS. ~ FreeCodeCamp</a>
                   </li> -->
-              <li class="resource-link">
-                <a target="_blank" href="https://www.youtube.com/watch?v=-MTSQjw5DrM">40
-                  RESTFU APIs in 100 seconds // Build an API from Scratch with Node.js Express ~ Fireship</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
+
             </ul>
           </div>
 
@@ -1373,11 +1320,6 @@
                 <!-- <span class="resource-link-badge">Video</span> -->
               </li>
               <li class="resource-link">
-                <a href="https://www.youtube.com/watch?v=bxsemcrY4gQ" target="_blank" rel="noopener noreferrer">Node.js
-                  Crash Course Tutorial #9</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
                 <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE" target="_blank" rel="noopener noreferrer">MongoDB
                   in 30 Minutes ~ Traversy Media</a>
                 <span class="resource-link-badge">Video</span>
@@ -1406,6 +1348,11 @@
           <div class="resource-card">
             <h3 class="resource-card-title">Videos</h3>
             <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://www.youtube.com/watch?v=-MTSQjw5DrM">40
+                  RESTFU APIs in 100 seconds // Build an API from Scratch with Node.js Express ~ Fireship</a>
+                <span class="resource-link-badge">Video</span>
+              </li>
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/ZYb_ZU8LNxs">Asynchronous JavaScript full course. ~
                   FreeCodeCamp</a>
@@ -1474,30 +1421,11 @@
             </p>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="https://jsonplaceholder.typicode.com/">JsonPlaceholder - Free fake API for
-                  testing and
-                  prototyping.</a>
-                <span class="resource-link-badge">Tool</span>
-              </li>
-              <li class="resource-link">
                 <a target="_blank" href="https://www.postman.com/">Postman - Postman is an API platform for building and
                   using APIs. Postman simplifies each step of the API lifecycle and streamlines collaboration so you can
                   create better APIs—faster.</a>
                 <span class="resource-link-badge">Tool</span>
               </li>
-
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/FLnxgSZ0DG4">Create your own fake rest API with JSON server. ~
-                  Traversy
-                  Media</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-              <li class="resource-link">
-                <a target="_blank" href="https://youtu.be/FLnxgSZ0DG4">Make your own mock API. ~ Code with Abba
-                  Kubow</a>
-                <span class="resource-link-badge">Video</span>
-              </li>
-            </ul>
           </div>
         </div>
       </section>
@@ -1538,9 +1466,9 @@
               </li>
               <li class="resource-link">
                 <a target="_blank"
-                  href="https://www.youtube.com/watch?v=KtnHb7FMk2Q&list=PLp50dWW_m40Vruw9uKGNqySCNFLXK5YiO">Express JS
+                  href="https://www.youtube.com/playlist?list=PLp50dWW_m40Vruw9uKGNqySCNFLXK5YiO">Express JS
                   Tutorial for Beginners. ~ ARC Tutorials</a>
-                <span class="resource-link-badge">Video, Playlist</span>
+                <span class="resource-link-badge">Playlist</span>
               </li>
               <li class="resource-link">
                 <a target="_blank" href="https://www.youtube.com/watch?v=qwfE7fSVaZM">Node.js / Express Course Build 4
