Added two videos in the Career Page about what Frontend Development is.

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -208,7 +208,18 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"></a>
+                  <a
+                    target="_blank" 
+                    href="https://www.youtube.com/watch?v=UlG62IXqa5"
+                    >What does a Frontend Developer actually do? ~ Gyasi Linje </a
+                   >
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank" 
+                    href="https://www.youtube.com/watch?v=DYB-Ujsf2uY&t=1s"
+                    >How to become a Frontend Developer ~ Tiff In Tech </a
+                   >
                 </li>
               </ul>
             </div>
